# Meraki_workflow

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .tauri-structure.md  CLAUDE.md  MANIFEST.in  Makefile  README.md  STORY_3.3_COMPLETION.md  STORY_4.1_COMPLETION.md  STORY_4.2_COMPLETION.md  STORY_4.3_COMPLETION.md  TAURI_QUICK_REFERENCE.md  TAURI_SETUP.md  package.json  pyproject.toml  requirements.txt  setup.py  setup.sh
.aios/: brownfield-fullstack-phase1-state.yaml
.aios-core/: core-config.yaml
.claude/agents/: meraki-specialist.md  network-analyst.md  report-designer.md  workflow-creator.md
.claude/knowledge/: cisco-workflows-schema.md  meraki-api-automation.md
.claude/rules/: bug-memory.md
.github/workflows/: README.md  ci.yml  release.yml  test-npm-package.yml
CNL_agents/meraki-specialist/: SKILL.md
clients/exemplo/: changelog.md
docker/: Dockerfile  README.md  docker-compose.yml
docs/: CNL_PIP_DISTRIBUTION.md  PLANO_MCP_WORKFLOWS.md  WORKFLOWS.md  agents_instructions.md  architecture.md  brief.md  flow-architecture.md  meraki_api_investigation.md  npm-distribution.md  quick_start_guide.md  roadmap-meraki-api-coverage.md  sprint-plan.md  tauri-integration-guide.md  user_manual.md  websocket_api.md
docs/ISSUES-FIXED/: issue-fixed.md
docs/PRD/: PRD-phase1-po-validation.md  (+5 more)
examples/: changelog_usage.py  test_config.py  test_report.py  workflow_usage.py
frontend/: package-lock.json  package.json  vite.config.ts
homebrew/: .gitignore  QUICKSTART.md  README.md  cnl.rb  generate-checksums.sh  verify-formula.sh
mcp-server/: README.md  mcp.json  requirements.txt
npm/: .npmignore  CHECKLIST.md  PUBLISHING.md  README.md  cisco-cnl-0.1.0.tgz  package.json  test-integration.sh  test-local.sh
scripts/: __init__.py  __version__.py  agent_prompts.py  agent_router.py  agent_tools.py  ai_engine.py  api.py  auth.py  automation.py  build.sh  changelog.py  chat_session.py  cli.py  cli_discovery.py  config.py  config_routes.py  discovery.py  discovery_routes.py  executor_utils.py  investigate_api.py  n8n_client.py  n8n_routes.py  n8n_template_engine.py  path_validation.py  profile_routes.py  report.py  report_routes.py  report_server.py  safety.py  server.py  settings.py  settings_routes.py  sync-version.sh  task_executor.py  task_models.py  task_registry.py  template_loader.py  test_websocket_manual.py  verb_utils.py  workflow.py  (+1 more)
squads/: CHANGELOG.md  README.md  config.yaml  extract-sop.md  squad-creator.md
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/permissions/: backend.toml
src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs  tray.rs  updater.rs
tests/: __init__.py  conftest.py  test_agent_prompts.py  test_agent_router.py  test_ai_engine.py  test_analyst_migration.py  test_api.py  test_auth.py  test_changelog.py  test_classification_set.json  test_config.py  test_discovery.py  test_epic10_switching.py  test_epic8_security.py  test_epic9_observability.py  test_mcp_server.py  test_n8n_client.py  test_n8n_push.py  test_n8n_templates.py  test_new_registry_functions.py  test_phase2_wave1.py  test_phase2_wave2.py  test_phase2_wave3.py  test_phase2_wave4.py  test_product_guards.py  test_router_integration.py  test_safety.py  test_server.py  test_settings.py  test_specialist_migration.py  test_task_executor.py  test_task_registry.py  test_template_loader.py  test_verb_classification.py  test_websocket.py
workflows/: README.md  data-usage-daily-alert.json
(+264 files in other folders)
